<?xml version="1.0"?>
<package format="2">
  <name>ping360_sonar</name>
  <version>0.1.0</version>
  <description>The sonar-ping360 package</description>

  <maintainer email="anas.mazouni@stormix.co">Anas Mazouni</maintainer>
  <maintainer email="henrique.martinez-de-azevedo@eleves.ec-nantes.fr">Henrique Martinez de Azevedo</maintainer>


  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>cv_bridge</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>dynamic_reconfigure</exec_depend>
</package>
