<?xml version="1.0" ?>
<package format="2">
  <name>ping360_sonar</name>
  <version>1.2.8</version> 
  <description>A ROS package for Blue Robotics Ping360 Sonar</description>

  <url type="website">http://wiki.ros.org/ping360_sonar</url>
  <url type="repository">https://github.com/CentraleNantesRobotics/ping360_sonar.git</url>
  <url type="bugtracker">https://github.com/CentraleNantesRobotics/ping360_sonar/issues</url>

  <author>Anas Mazouni</author>
  <author>Henrique Martinez de Azevedo</author>

  <maintainer email="anas.mazouni@stormix.co">Anas Mazouni</maintainer>
  <maintainer email="henrique.martinez-de-azevedo@eleves.ec-nantes.fr">Henrique Martinez de Azevedo</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>cv_bridge</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>roslint</build_depend>

  <build_export_depend>cv_bridge</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>

  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>dynamic_reconfigure</exec_depend>
  <exec_depend>message_runtime</exec_depend>
</package>