<?xml version="1.0" ?>
<package format="3">
  <name>ping360_sonar</name>
  <version>2.0.1</version>
  <description>A ROS 2 package for Blue Robotics Ping360 Sonar</description>

  <url type="website">http://wiki.ros.org/ping360_sonar</url>
  <url type="repository">https://github.com/CentraleNantesRobotics/ping360_sonar.git</url>
  <url type="bugtracker">https://github.com/CentraleNantesRobotics/ping360_sonar/issues</url>

  <author>Olivier Kermorgant</author>

  <maintainer email="olivier.kermorgant@ec-nantes.fr">Olivier Kermorgant</maintainer>

  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <depend>image_transport</depend>
  <depend>rclcpp</depend>
  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>ping360_sonar_msgs</depend>
  <depend>python3-bluerobotics-ping-pip</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
